namespace TRockApi.ProductCatalog.Api {
    public interface IProductOffering {
        
    }
}